2005-07-23  Per Bothner  <per@bothner.com>

	* ReplMode.java (make): Inherit from global, not current, environment.

	* emacs.scm (interaction-window): New function.
	(scheme-window): Rename to scheme-interaction-window.
	(elisp-interaction-window): New function.
	(define-menubar): Add entry for elisp interaction, as well as Scheme.

2005-06-04  Per Bothner  <per@bothner.com>

	* ProcessMode.java (<clinit>):  Also map 'enter key to enterAction.

2005-05-18  Christian Surlykke <christian@surlykke.dk> 

	* EKeymap.java: (getKeyForName): Map "return" to '\r' rather than '\n'.

2005-05-18  Christian Surlykke <christian@surlykke.dk>

	* EKeymap.java: (CTRL_MASK, SHIFT_MASK, META_MASK, ALT_MASK) now 
	public. (show) New method for debugging. Prints integer as binary 
	string leftpadded with zeros.
	
2005-04-18  Per Bothner  <per@bothner.com>

	* Buffer.java: Use use:java.lang.CharSequence PreProcess name.

2005-04-17  Per Bothner  <per@bothner.com>

	* Makefile.am: Always compile all files, regardless of --with-swing.

2005-04-16  Per Bothner  <per@bothner.com>

	* emacs.scm (call-interactively, make-variable-buffer-local,
	make-local-variable): Move buffer-dependent functions from MiscOps.scm.
	This removes one dependency of gnu.jemacs.lang on gnu.jemacs.buffer.

2005-03-04  Per Bothner  <per@bothner.com>

	* ReplMode.java: Update Interpreter->Lanuguage various places.

2005-02-25  Per Bothner  <per@bothner.com>

	* emacs.scm (global-map, esc-map): Define using define-variable.

2005-01-07  Per Bothner  <per@bothner.com>

	* Buffer. java (getStringContent): New abstract (uncommented) method.
	(charAt, setCharAt, fill, writeTo, consume): New CharSeq methods,
	implemented using getStringContent.

2004-12-29  Per Bothner  <per@bothner.com>

	* BufferLocal.java (make): Set base field.
	(isBound, get, set): Make robust in case there is no current Buffer.

2004-12-05  Per Bothner  <per@bothner.com>

	* BufferLocalConstraint.java: Remove class, replaced by: